Add configuration files and scripts for EZarr setup
- Introduced .cursorignore to exclude video files from cursor operations.
- Updated .gitignore to include additional log and metadata files.
- Added container_configs.py for managing Docker container configurations.
- Created docker-compose-ezarr-storage.yml for orchestrating media services.
- Implemented user and group setup in users_groups_setup.py.
- Added setup.sh for initial setup and permissions configuration.
- Included remove_old_users.sh for cleaning up previous installations.
- Added update_containers.sh for updating Docker containers.
- Created main.py for CLI interaction to configure services.
- Added LICENSE.md for project licensing.
- Included issue templates for bug reports and feature requests in .github directory.
- Added GitHub Actions workflow for automated setup and deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,17 @@ __pycache__/
 setup/config/
 lost+found/ 
 *.srt
+setup/data/media/audiobookshelf-metadata/logs/daily/2025-06-21.txt
+setup/data/media/audiobookshelf-metadata/logs/daily/2025-06-22.txt
+setup/data/media/audiobookshelf-metadata/logs/daily/2025-06-23.txt
+setup/data/media/audiobookshelf-metadata/logs/daily/2025-06-24.txt
+setup/data/media/audiobookshelf-metadata/logs/daily/2025-06-25.txt
+setup/data/media/audiobookshelf-metadata/logs/daily/2025-06-26.txt
+setup/data/media/audiobookshelf-metadata/logs/daily/2025-06-27.txt
+setup/data/media/audiobookshelf-metadata/logs/daily/2025-06-28.txt
+setup/data/media/movies/Apocalypse Now (1979)/Apocalypse.Now.1979.Final.Cut.REPACK.4K.HDR.DV.2160p.BDRemux Ita Eng x265-NAHOM/\[TGx]Downloaded from torrentgalaxy.to .txt.txt
+setup/data/media/movies/Apocalypse Now (1979)/Apocalypse.Now.1979.Final.Cut.REPACK.4K.HDR.DV.2160p.BDRemux Ita Eng x265-NAHOM/icv-crew.com.txt
+setup/data/media/movies/Apocalypse Now (1979)/Apocalypse.Now.1979.Final.Cut.REPACK.4K.HDR.DV.2160p.BDRemux Ita Eng x265-NAHOM/info.txt
+setup/data/media/movies/Apocalypse Now (1979)/Apocalypse.Now.1979.Final.Cut.REPACK.4K.HDR.DV.2160p.BDRemux Ita Eng x265-NAHOM/NH.png
+setup/data/media/movies/The Lighthouse (2019)/00286.m2ts
+setup/data/torrents/tv/Bobs.Burgers.Season.15.COMPLETE.1080p.DSNP.WEB-DL.x264.ESubs.\[3GB].\[MP4].\[S15.Full]-\[y2flix]/\[ y2flix.cc ].txt
